course copy from another course

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -211,6 +211,8 @@ txt.ui.common.Participants2=Účastníků
 txt.ui.common.CourseType=Typ kurzu
 txt.ui.common.confirmCourseApplicationEmail=Potvrzující email k přihlášce
 txt.ui.common.confirmCourseApplicationEmail.desc=Odešle potvrzuijící email na vybrané přihlášky
+txt.ui.common.copy.course.desc=Vytvoří kopii kurzu z aktuálního kurzu.
+
 txt.ui.CourseType.STANDARD.desc=Jednorázový kurz daném školním roce.
 txt.ui.CourseType.TWO_SEMESTER.desc=Kurz probíhající v obou pololetích školního roku. 
 
@@ -326,6 +328,7 @@ msg.ui.info.courseParticipationRenewed=Účast na kurzu byla obnovena.
 msg.ui.warn.participantAlreadyInCourse=Účastník je již do kurzu {0} zařazen.
 msg.ui.warn.participantLoggedToCourse=Účastník {0} byl zařazen do kurzu {1}.
 msg.ui.info.courseApplicationMailSent=Potvrzující email byl odeslán pro vybrané přihlášky.
+msg.ui.info.courseCopiedFromCourse=Kurz "{0}" byl vytvořen zkopírováním z kurzu "{1}".
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
