course copying, add to course list

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -211,6 +211,7 @@ txt.ui.common.Participants2=Účastníků
 txt.ui.common.CourseType=Typ kurzu
 txt.ui.common.confirmCourseApplicationEmail=Potvrzující email k přihlášce
 txt.ui.common.confirmCourseApplicationEmail.desc=Odešle potvrzuijící email na vybrané přihlášky
+txt.ui.common.copy=Kopírovat
 txt.ui.common.copy.course.desc=Vytvoří kopii kurzu z aktuálního kurzu.
 
 txt.ui.CourseType.STANDARD.desc=Jednorázový kurz daném školním roce.
@@ -284,6 +285,7 @@ msg.ui.quest.MessageThrowOut=Opravdu si přejete zahodit tento koncept?
 msg.ui.quest.ProcessNotValidAddress=Zadaná adresa není platná, přejete si přesto pokračovat?
 msg.ui.warn.ProcessNotValidAddress=Zadaná adresa není platná, zadejte prosím platnou adresu.
 msg.ui.quest.title.NotValidAddress=Neplatná adresa
+msg.ui.quest.copyCourse=Přejete si vytvořit kopii kurzu "{0}" do aktuálního ročníku "{1}"?
 
 msg.ui.quest.title.messageSendConfirm=Odeslání zprávy
 msg.ui.quest.MessageSendWithoutSubjectAndText=Opravdu chcete odeslat zprávu bez předmětu a textu?
@@ -305,6 +307,7 @@ msg.ui.info.itemDeleted=Položka byla odstraněna.
 msg.ui.info.itemDeleted.arg=Položka "{0}" byla odstraněna.
 msg.ui.info.passwordChanged=Heslo bylo změněno.
 msg.ui.title.deleteRecord=Odstranění záznamu
+msg.ui.title.copyRecord=Kopie záznamu
 msg.ui.title.MessageThrowOut=Zahodit zprávu
 msg.ui.warn.BadCredentials=Nesprávné uživatelské jméno nebo heslo.
 msg.ui.warn.courseApplicationsNotAllowed=Přihlášky do plaveckého kurzu nejsou aktuálně otevřené.
