--- a/scb-data-service/src/main/resources/scb-data-service-message.properties
+++ b/scb-data-service/src/main/resources/scb-data-service-message.properties
@@ -21,3 +21,5 @@ txt.ui.common.Amount=Částka
 txt.ui.common.CZK=Kč
 txt.ui.common.VarSymbol=Variabilní symbol
 txt.ui.common.MessageToReceipent=Zpráva pro příjemce
+
+txt.svc.course.name.copyFrom=Kopie {0} {1}
