--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -212,7 +212,12 @@ txt.ui.common.CourseType=Typ kurzu
 txt.ui.common.confirmCourseApplicationEmail=Potvrzující email k přihlášce
 txt.ui.common.confirmCourseApplicationEmail.desc=Odešle potvrzuijící email na vybrané přihlášky
 txt.ui.common.copy=Kopírovat
+txt.ui.common.copy.course=Kopírování kurzu
 txt.ui.common.copy.course.desc=Vytvoří kopii kurzu z aktuálního kurzu.
+
+txt.ui.common.copy.courseParticipants=včetně účastníků
+txt.ui.common.copy.lessons=včetně lekcí
+txt.ui.common.copy.trainers=včetně trenérů
 
 txt.ui.CourseType.STANDARD.desc=Jednorázový kurz daném školním roce.
 txt.ui.CourseType.TWO_SEMESTER.desc=Kurz probíhající v obou pololetích školního roku. 
