course list, batch actions

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -213,7 +213,8 @@ txt.ui.common.confirmCourseApplicationEmail=Potvrzující email k přihlášce
 txt.ui.common.confirmCourseApplicationEmail.desc=Odešle potvrzuijící email na vybrané přihlášky
 txt.ui.common.copy=Kopírovat
 txt.ui.common.copy.course=Kopírování kurzu
-txt.ui.common.copy.course.desc=Vytvoří kopii kurzu z aktuálního kurzu.
+txt.ui.common.copy.course.desc=Vytvořít kopii kurzu z aktuálního kurzu.
+txt.ui.common.copy.courseList.desc=Vytvořít kopii z vybraných kurzů
 
 txt.ui.common.copy.courseParticipants=včetně účastníků
 txt.ui.common.copy.lessons=včetně lekcí
@@ -278,6 +279,7 @@ msg.ui.warn.courseIsDeleted=Vybraný kurz "{0}" byl odstraněn, vyberte prosím 
 msg.ui.warn.noBankAccountInConfig=V nastavení není vyplněno číslo bankovního účtu.
 msg.ui.quest.deleteApplication=Opravdu si přejete odstranit přihlášku "{0}"?
 msg.ui.quest.deleteCourse=Opravdu si přejete odstranit kurz "{0}"?
+msg.ui.quest.deleteCourseList=Opravdu si přejete odstranit vybrané kurzy?
 msg.ui.quest.deleteUser=Opravdu si přejete odstranit uživatele "{0}"?
 msg.ui.quest.deletePayment=Opravdu si přejete odstranit platbu "{0}" Kč?
 msg.ui.quest.deleteItem.arg=Opravdu si přejete odstranit položku "{0}"?
@@ -305,6 +307,7 @@ msg.ui.info.applicationForParticipantCreated=Účastník {0} byl úspěšně př
 msg.ui.info.changesSaved=Změny byly úspěšně uloženy.
 msg.ui.info.applicationDeleted=Přihláška "{0}" byla odstraněna.
 msg.ui.info.courseDeleted=Kurz "{0}" byl odstraněn.
+msg.ui.info.courseListDeleted=Vybrané kurzy byly odstraněny.
 msg.ui.info.userDeleted=Uživatel "{0}" byl odstraněn.
 msg.ui.info.paymentDeleted=Platba "{0}" Kč byla odstraněna.
 msg.ui.info.itemDeleted=Položka byla odstraněna.
@@ -334,7 +337,8 @@ msg.ui.info.courseParticipationRenewed=Účast na kurzu byla obnovena.
 msg.ui.warn.participantAlreadyInCourse=Účastník je již do kurzu {0} zařazen.
 msg.ui.warn.participantLoggedToCourse=Účastník {0} byl zařazen do kurzu {1}.
 msg.ui.info.courseApplicationMailSent=Potvrzující email byl odeslán pro vybrané přihlášky.
-msg.ui.info.courseCopiedFromCourse=Kurz "{0}" byl vytvořen zkopírováním z kurzu "{1}".
+msg.ui.info.courseCopiedFromCourse=Kurz "{0}" byl zkopírován z kurzu "{1}".
+msg.ui.info.courseListCopied=Kurzy byly zkopírovány do ročníku "{1}".
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
