Database source defined by JNDI

--- a/scb-ui-zk/src/main/webapp/WEB-INF/web.xml
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/web.xml
@@ -102,6 +102,14 @@
 		<dispatcher>INCLUDE</dispatcher>
 		<dispatcher>FORWARD</dispatcher>
 	</filter-mapping>
+	
+	<!-- Potreba pro nastaveni datasource na JeTTy (lokalni prostredi) -->
+    <resource-ref>
+    	<res-ref-name>jdbc.sportlogic</res-ref-name>
+    	<res-type>javax.sql.DataSource</res-type>
+    	<res-auth>Container</res-auth>
+    	<res-sharing-scope>Shareable</res-sharing-scope>
+    </resource-ref>
 
 	<welcome-file-list>
 		<welcome-file>/pages/common/login.zul</welcome-file>
