--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -215,6 +215,7 @@ txt.ui.common.copy=Kopírovat
 txt.ui.common.copy.course=Kopírování kurzu
 txt.ui.common.copy.course.desc=Vytvořít kopii kurzu z aktuálního kurzu.
 txt.ui.common.copy.courseList.desc=Vytvořít kopii z vybraných kurzů
+txt.ui.common.allowedOnlyInSameYear=lze jen ve stejném ročníku
 
 txt.ui.common.copy.courseParticipants=včetně účastníků
 txt.ui.common.copy.lessons=včetně lekcí
