--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -157,7 +157,7 @@ txt.ui.common.Odeslat=Odeslat
 txt.ui.common.Predmet=Předmět
 txt.ui.common.Prijemcu=Příjemců
 txt.ui.common.SeznamPrijemcu=Seznam příjemců
-txt.ui.common.MaxParticCount=Maximální počet účastníků
+txt.ui.common.MaxParticCount=Max. účastníků
 txt.ui.common.CourseSelection=Výběr kurzu
 txt.ui.common.Occupancy=Obsazenost
 txt.ui.common.occupied=obsazeno
@@ -217,6 +217,9 @@ txt.ui.common.copy.course.desc=Vytvořít kopii kurzu z aktuálního kurzu.
 txt.ui.common.copy.courseList.desc=Vytvořít kopii z vybraných kurzů
 txt.ui.common.allowedOnlyInSameYear=lze jen ve stejném ročníku
 txt.ui.common.active=aktivní
+txt.ui.common.inactive=neaktivní
+txt.ui.common.start=Spustit
+txt.ui.common.stop=Zastavit
 
 txt.ui.common.copy.courseParticipants=včetně účastníků
 txt.ui.common.copy.lessons=včetně lekcí
@@ -341,6 +344,10 @@ msg.ui.warn.participantLoggedToCourse=Účastník {0} byl zařazen do kurzu {1}.
 msg.ui.info.courseApplicationMailSent=Potvrzující email byl odeslán pro vybrané přihlášky.
 msg.ui.info.courseCopiedFromCourse=Kurz "{0}" byl zkopírován z kurzu "{1}".
 msg.ui.info.courseListCopied=Kurzy byly zkopírovány do ročníku "{0}".
+msg.ui.info.courseStarted=Kurz "{0}" spuštěn.
+msg.ui.info.courseStopped=Kurz "{0}" zastaven.
+msg.ui.info.courseListStarted=Kurzy spuštěny.
+msg.ui.info.courseListStopped=Kurzy zastaveny.
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
