--- a/scb-data-service/pom.xml
+++ b/scb-data-service/pom.xml
@@ -119,6 +119,14 @@
 		    <artifactId>org.liveSense.jdbc.mysql</artifactId>
 		</dependency>
 	
+		 <!-- H2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.196</version>
+        </dependency>
+    
+	
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
