--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -220,6 +220,8 @@ txt.ui.common.active=aktivní
 txt.ui.common.inactive=neaktivní
 txt.ui.common.start=Spustit
 txt.ui.common.stop=Zastavit
+txt.ui.common.fromCourseParticipant=Z přihlášky
+txt.ui.common.moveFromAnotherCourse=Přesunout z jiného kurzu
 
 txt.ui.common.copy.courseParticipants=včetně účastníků
 txt.ui.common.copy.lessons=včetně lekcí
