fix not existing resource bundle key for payment notification email

--- a/scb-data-service/src/main/resources/scb-data-service-message.properties
+++ b/scb-data-service/src/main/resources/scb-data-service-message.properties
@@ -10,6 +10,7 @@ msg.validation.warn.usernameWithSameUsernameExists=Uživatel s uživatelským jm
 # mail s platebními instrukcemi
 msg.ui.mail.paymentInstruction.subject.twoSemester=Platba za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}
 msg.ui.mail.paymentInstruction.subject.standard=Platba za kurz "{0}", ročník {1}, účastník {2}
+msg.ui.mail.paymentInstruction.subject=Platba za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}
 msg.ui.mail.paymentInstruction.text0=Dobrý den,
 msg.ui.mail.paymentInstruction.text1.twoSemester=níže zasíláme instrukce k platbě za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}.
 msg.ui.mail.paymentInstruction.text1.standard=níže zasíláme instrukce k platbě za kurz "{0}", ročník {1}, účastník {2}.
