add payment type discount

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -428,6 +428,7 @@ enum.ScbUserRole.TRAINER=Trenér
 enum.PaymentType.CASH=Hotovost
 enum.PaymentType.BANK_TRANS=Bankovní převod
 enum.PaymentType.DONATE=Sponzorský dar
+enum.PaymentType.DISCOUNT=Sleva
 enum.PaymentType.OTHER=Jiný
 
 enum.PaymentProcessType.AUTOMATIC=Automaticky
