--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -222,6 +222,7 @@ txt.ui.common.start=Spustit
 txt.ui.common.stop=Zastavit
 txt.ui.common.fromCourseParticipant=Z přihlášky
 txt.ui.common.moveFromAnotherCourse=Přesunout z jiného kurzu
+txt.ui.common.enterAgain=Zadejte znovu
 
 txt.ui.common.copy.courseParticipants=včetně účastníků
 txt.ui.common.copy.lessons=včetně lekcí
@@ -270,6 +271,7 @@ txt.ui.heading.learningCourse=Výuka kurzu {0}
 msg.ui.validation.err.valueRequired=Povinné!
 msg.ui.validation.err.invalidaEmail=Neplatný formát!
 msg.ui.validation.err.invalidFormat=Neplatný formát!
+msg.ui.validation.err.notUniqueUsername=Email/Uživatelské jméno je již registrováno!
 msg.ui.validation.err.invalidaBirthNumber=Neplatné rodné číslo.
 msg.ui.validation.err.WrongValue=Nesprávná hodnota.
 msg.ui.validation.err.ValuesNotEqual=Hodnoty si neodpovídají.
