course application custom title use on all pages

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -1,5 +1,5 @@
 txt.ui.menu.application=PŘIHLÁŠKA
-txt.ui.menu.applicationWithYear=Přihláška - kurz {0}
+txt.ui.menu.applicationWithYear=Přihláška na kurz {0}
 txt.ui.menu.dashboard=Úvodní stránka
 txt.ui.menu.applications=Přihlášky
 txt.ui.menu.applicationList=Seznam přihlášek
