--- a/scb-data-service/src/main/resources/scb-data-service-message.properties
+++ b/scb-data-service/src/main/resources/scb-data-service-message.properties
@@ -6,6 +6,7 @@ msg.validation.warn.recordNotExistsInDB=Záznam nelze odstranit, protože již v
 msg.validation.warn.itemWithSameTypeAndNameAlreadyExists=Položka se stejným názvem již existuje.
 msg.validation.warn.styleCannotBeDeleteBecauseUsedInResult=Styl nelze odstranit, protože je použit ve výsledku účastníka.
 msg.validation.warn.usernameWithSameUsernameExists=Uživatel s uživatelským jménem {0} již v systému existuje.
+msg.validation.warn.courseApplDynAttrWithSameNameExists=Dynamický atribut se jménem {0} již v systému existuje.
 
 # mail s platebními instrukcemi
 msg.ui.mail.paymentInstruction.subject.twoSemester=Platba za kurz "{0}" pro {1}. pololetí ročníku {2}, účastník {3}
