course application dyn rows, frontend, grid admin settings

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -218,6 +218,7 @@ txt.ui.common.copy.course.desc=Vytvořít kopii kurzu z aktuálního kurzu.
 txt.ui.common.copy.courseList.desc=Vytvořít kopii z vybraných kurzů
 txt.ui.common.allowedOnlyInSameYear=lze jen ve stejném ročníku
 txt.ui.common.active=aktivní
+txt.ui.common.active2=Aktivní
 txt.ui.common.inactive=neaktivní
 txt.ui.common.start=Spustit
 txt.ui.common.stop=Zastavit
@@ -225,6 +226,10 @@ txt.ui.common.fromCourseParticipant=Z přihlášky
 txt.ui.common.moveFromAnotherCourse=Přesunout z jiného kurzu
 txt.ui.common.enterAgain=Zadejte znovu
 txt.ui.common.courseApplicationTitle=Nadpis na přihlášce 
+txt.ui.common.dataType=Datový typ 
+txt.ui.common.required=Povinné 
+txt.ui.common.dynamicAttributes=Dynamické atributy 
+txt.ui.common.basicSettings=Základní nastavení 
 
 txt.ui.common.copy.courseParticipants=včetně účastníků
 txt.ui.common.copy.lessons=včetně lekcí
@@ -460,3 +465,9 @@ enum.IscusRole.OTHER=Ostatní
 
 enum.CourseType.STANDARD=Standardní
 enum.CourseType.TWO_SEMESTER=Celoroční
+
+enum.CourseApplDynAttrConfigType.TEXT=Text
+enum.CourseApplDynAttrConfigType.DATE=Datum
+enum.CourseApplDynAttrConfigType.INT=Celé číslo
+enum.CourseApplDynAttrConfigType.DOUBLE=Číslo s desetinnou čárkou
+enum.CourseApplDynAttrConfigType.BOOLEAN=Hodnota ano/ne
