course application dyn rows, gui delete, activate/deactivate

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -230,6 +230,8 @@ txt.ui.common.dataType=Datový typ
 txt.ui.common.required=Povinné 
 txt.ui.common.dynamicAttributes=Dynamické atributy 
 txt.ui.common.basicSettings=Základní nastavení 
+txt.ui.common.Aktivovat=Aktivovat
+txt.ui.common.Deaktivovat=Deaktivovat 
 
 txt.ui.common.copy.courseParticipants=včetně účastníků
 txt.ui.common.copy.lessons=včetně lekcí
@@ -301,6 +303,7 @@ msg.ui.quest.deleteUser=Opravdu si přejete odstranit uživatele "{0}"?
 msg.ui.quest.deletePayment=Opravdu si přejete odstranit platbu "{0}" Kč?
 msg.ui.quest.deleteItem.arg=Opravdu si přejete odstranit položku "{0}"?
 msg.ui.quest.deleteItem=Opravdu si přejete odstranit položku?
+msg.ui.quest.deleteDynAttrConfig=Opravdu si přejete odstranit dynamický atribut "{0}"?
 msg.ui.quest.assignInCourseParticipant=Některý z účastníků je již přihlášen do jiného kurzu, chcete pokračovat?
 msg.ui.quest.participantRepresentativeExists=Email / Uživatelské jméno {0} je již v systému registrováno. Prosím přihlaště se pod svým účtem do aplikace a na řádku dítěte zmáčkněte Přihláška na daný ročník nebo pro přihlášení dalšího dítětě zmáčknětě Přihlásit nového účastníka.
 msg.ui.quest.participantPersonalNoExists=Rodné číslo {0} je již v systému registrováno. Prosím přihlaště se pod svým účtem do aplikace a na řádku dítěte zmáčkněte Přihláška na daný ročník.
@@ -329,6 +332,7 @@ msg.ui.info.userDeleted=Uživatel "{0}" byl odstraněn.
 msg.ui.info.paymentDeleted=Platba "{0}" Kč byla odstraněna.
 msg.ui.info.itemDeleted=Položka byla odstraněna.
 msg.ui.info.itemDeleted.arg=Položka "{0}" byla odstraněna.
+msg.ui.info.dynAttrConfigDeleted=Dynamický atribut "{0}" byl odstraněn.
 msg.ui.info.passwordChanged=Heslo bylo změněno.
 msg.ui.title.deleteRecord=Odstranění záznamu
 msg.ui.title.MessageThrowOut=Zahodit zprávu
@@ -360,6 +364,8 @@ msg.ui.info.courseStarted=Kurz "{0}" spuštěn.
 msg.ui.info.courseStopped=Kurz "{0}" zastaven.
 msg.ui.info.courseListStarted=Kurzy spuštěny.
 msg.ui.info.courseListStopped=Kurzy zastaveny.
+msg.ui.info.dynAttrActivated=Dynamický atribut "{0}" aktivován.
+msg.ui.info.dynAttrDeactivated=Dynamický atribut "{0}" deaktivován.
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
