dyn attributes config GUI

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -232,6 +232,7 @@ txt.ui.common.dynamicAttributes=Dynamické atributy
 txt.ui.common.basicSettings=Základní nastavení 
 txt.ui.common.Aktivovat=Aktivovat
 txt.ui.common.Deaktivovat=Deaktivovat 
+txt.ui.common.DynamicAttribute=Dynamický atribut
 
 txt.ui.common.copy.courseParticipants=včetně účastníků
 txt.ui.common.copy.lessons=včetně lekcí
@@ -366,6 +367,7 @@ msg.ui.info.courseListStarted=Kurzy spuštěny.
 msg.ui.info.courseListStopped=Kurzy zastaveny.
 msg.ui.info.dynAttrActivated=Dynamický atribut "{0}" aktivován.
 msg.ui.info.dynAttrDeactivated=Dynamický atribut "{0}" deaktivován.
+msg.ui.info.dynAttrStored=Dynamický atribut "{0}" uložen.
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
