payment instruction, varsymbol text, modal title

--- a/scb-data-service/src/main/resources/scb-data-service-message.properties
+++ b/scb-data-service/src/main/resources/scb-data-service-message.properties
@@ -18,6 +18,7 @@ msg.ui.mail.paymentInstruction.text1.twoSemester=níže zasíláme instrukce k p
 msg.ui.mail.paymentInstruction.text1.standard=níže zasíláme instrukce k platbě za kurz "{0}", ročník {1}, účastník {2}.
 msg.ui.mail.paymentInstruction.text2=Platbu prosím pošlete nejpozději do {0}.
 msg.ui.mail.paymentInstruction.text4=Pokud již byla platba uhrazena, berte prosím tuto zprávu jako bezpředmětnou.
+msg.ui.mail.paymentInstruction.text5=ZKONTROLUJTE PROSÍM SPRÁVNOST VARIABILNÍHO SYMBOLU, který uvádíte v příkazu k úhradě. V případě chybného zadání nemůže být Vaše platba identifikována. NEPLAŤTE VÍCE ÚHRAD POD JEDNÍM VARIABILNÍM SYMBOLEM, platba pak nemůže být identifikována.
 
 txt.ui.common.AccountNo=Číslo účtu
 txt.ui.common.Amount=Částka
