standard course payment notification filter

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -233,10 +233,11 @@ txt.ui.common.basicSettings=Základní nastavení
 txt.ui.common.Aktivovat=Aktivovat
 txt.ui.common.Deaktivovat=Deaktivovat 
 txt.ui.common.DynamicAttribute=Dynamický atribut
-
 txt.ui.common.copy.courseParticipants=včetně účastníků
 txt.ui.common.copy.lessons=včetně lekcí
 txt.ui.common.copy.trainers=včetně trenérů
+txt.ui.common.copy.notSent=Neodesláno
+txt.ui.common.copy.sent=Odesláno
 
 txt.ui.CourseType.STANDARD.desc=Jednorázový kurz daném školním roce.
 txt.ui.CourseType.TWO_SEMESTER.desc=Kurz probíhající v obou pololetích školního roku. 
