change usernme base functions, course representative and admin

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -238,6 +238,9 @@ txt.ui.common.copy.lessons=včetně lekcí
 txt.ui.common.copy.trainers=včetně trenérů
 txt.ui.common.copy.notSent=Neodesláno
 txt.ui.common.copy.sent=Odesláno
+txt.ui.common.changeUsername=Změna uživatelského jména
+txt.ui.common.changeEmail1=změnit také primární email uživatele
+txt.ui.common.change=Změnit
 
 txt.ui.CourseType.STANDARD.desc=Jednorázový kurz daném školním roce.
 txt.ui.CourseType.TWO_SEMESTER.desc=Kurz probíhající v obou pololetích školního roku. 
@@ -369,6 +372,7 @@ msg.ui.info.courseListStopped=Kurzy zastaveny.
 msg.ui.info.dynAttrActivated=Dynamický atribut "{0}" aktivován.
 msg.ui.info.dynAttrDeactivated=Dynamický atribut "{0}" deaktivován.
 msg.ui.info.dynAttrStored=Dynamický atribut "{0}" uložen.
+msg.ui.info.usernameChanged=Uživatelské jméno změněno na {0}.
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
