change username finish

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -372,7 +372,8 @@ msg.ui.info.courseListStopped=Kurzy zastaveny.
 msg.ui.info.dynAttrActivated=Dynamický atribut "{0}" aktivován.
 msg.ui.info.dynAttrDeactivated=Dynamický atribut "{0}" deaktivován.
 msg.ui.info.dynAttrStored=Dynamický atribut "{0}" uložen.
-msg.ui.info.usernameChanged=Uživatelské jméno změněno na {0}.
+msg.ui.info.usernameChanged=Uživatelské jméno změněno na "{0}", odeslán notifikační email uživateli.
+msg.ui.info.usernameChange.postActionMsg=Po uložení bude provedeno odhlášení a bude Vám odeslán email s přihlašovacími údaji.
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
@@ -407,6 +408,14 @@ msg.ui.mail.text.reset.text0=Dobrý den,
 msg.ui.mail.text.reset.text1=byl proveden reset přístupového hesla do aplikace {0}.
 msg.ui.mail.text.reset.text2=Uživatelské jméno: {0}
 msg.ui.mail.text.reset.text3=Nové heslo: {0}
+
+msg.ui.mail.subject.changeUsername=Změna uživatelského jména
+msg.ui.mail.text.usernameChange.text0=Dobrý den,
+msg.ui.mail.text.usernameChange.text1=byla provedena změna uživatelského jména do aplikace {0}.
+msg.ui.mail.text.usernameChange.text1.inclEmail=byla provedena změna kontaktního emailu a uživatelského jména do aplikace {0}.
+msg.ui.mail.text.usernameChange.text2=Uživatelské jméno: {0}
+msg.ui.mail.text.usernameChange.text3=Heslo: {0}
+msg.ui.mail.text.usernameChange.text4=Email: {0}
 
 # mail neprihlaseni z predchozi sezony
 msg.ui.mail.unregisteredToCurrSeason.subject=Přihláška na ročník {0}
