mail-send-items tabbox with new mesage and send messages grid

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -154,6 +154,7 @@ txt.ui.common.Zparovat=Spárovat
 txt.ui.common.RucneZparovat=Ručně spárovat
 txt.ui.common.ZparovaniPlatbyUcastnika=Zpárovnání platby účastníka [ {0} ]
 txt.ui.common.NovaZprava=Nová zpráva
+txt.ui.common.OdeslaneZpravy=Odeslané zprávy
 txt.ui.common.Odeslat=Odeslat
 txt.ui.common.Predmet=Předmět
 txt.ui.common.Prijemcu=Příjemců
