mail-sent-items, send mail status UI

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -254,6 +254,9 @@ txt.ui.iscus.IsTrainer=Je trenér
 txt.ui.iscus.IsReferee=Je rozhodčí
 txt.ui.iscus.ClubLabels=Štítky oddílu
 
+txt.ui.mail.SendSuccess=Úspěšně odesláno
+txt.ui.mail.SendFailed=Chyba v průběhu odeslání
+
 txt.ui.export.Standard=Standardní
 txt.ui.export.Cus=Česká unie sportu
 txt.ui.export.CSV=csv
