--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -242,6 +242,8 @@ txt.ui.common.copy.sent=Odesláno
 txt.ui.common.changeUsername=Změna uživatelského jména
 txt.ui.common.changeEmail1=změnit také primární email uživatele
 txt.ui.common.change=Změnit
+txt.ui.common.search=Hledat
+txt.ui.common.contentText=Obsahuje slova
 
 txt.ui.CourseType.STANDARD.desc=Jednorázový kurz daném školním roce.
 txt.ui.CourseType.TWO_SEMESTER.desc=Kurz probíhající v obou pololetích školního roku. 
