--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -282,6 +282,7 @@ txt.ui.month.11=Prosinec
 txt.ui.internalError=Interní chyba aplikace
 txt.ui.internalErrorCaught=Nastala interní chyba aplikace, zpráva o výskytu chyby byla odeslána na emailovou adresu správce.
 txt.ui.ToClose=Zavřít
+txt.ui.Search=Vyhledávání
 
 txt.ui.application.healthInfo=Údaje o zdravotní způsobilosti, alergiích, nemocech, popř. jiných zdravotních obtížích
 
