course application file admin frontend

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -43,7 +43,6 @@ txt.ui.common.password=Heslo
 txt.ui.common.ToDownloadApplication=Stáhnout přihlášku
 txt.ui.common.refreshData=Obnovit data
 txt.ui.common.name=Název
-txt.ui.common.description=Popis
 txt.ui.common.description2=Popis
 txt.ui.common.year=Rok
 txt.ui.common.participantCount=Účastníků
@@ -229,7 +228,8 @@ txt.ui.common.enterAgain=Zadejte znovu
 txt.ui.common.courseApplicationTitle=Nadpis na přihlášce 
 txt.ui.common.dataType=Datový typ 
 txt.ui.common.required=Povinné 
-txt.ui.common.dynamicAttributes=Dynamické atributy 
+txt.ui.common.dynamicAttributes=Dynamické atributy
+txt.ui.common.courseApplicationFiles=Soubory na přihlášce
 txt.ui.common.basicSettings=Základní nastavení 
 txt.ui.common.Aktivovat=Aktivovat
 txt.ui.common.Deaktivovat=Deaktivovat 
@@ -244,6 +244,11 @@ txt.ui.common.changeEmail1=změnit také primární email uživatele
 txt.ui.common.change=Změnit
 txt.ui.common.search=Hledat
 txt.ui.common.contentText=Obsahuje
+txt.ui.common.type=Typ
+txt.ui.common.PageText=Text na přihlášce
+txt.ui.common.PageAttachment=Soubor na přihlášce
+txt.ui.common.EmailAttachment=Soubor v emailu
+txt.ui.common.FileConfig=Konfigurace souboru na přihlášce
 
 txt.ui.CourseType.STANDARD.desc=Jednorázový kurz daném školním roce.
 txt.ui.CourseType.TWO_SEMESTER.desc=Kurz probíhající v obou pololetích školního roku. 
@@ -381,6 +386,7 @@ msg.ui.info.dynAttrDeactivated=Dynamický atribut "{0}" deaktivován.
 msg.ui.info.dynAttrStored=Dynamický atribut "{0}" uložen.
 msg.ui.info.usernameChanged=Uživatelské jméno změněno na "{0}", odeslán notifikační email uživateli.
 msg.ui.info.usernameChange.postActionMsg=Po uložení bude provedeno odhlášení a bude Vám odeslán email s přihlašovacími údaji.
+msg.ui.info.fileConfigStored=Nastavení souboru bylo uloženo.
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
@@ -500,3 +506,9 @@ enum.CourseApplDynAttrConfigType.DATE=Datum
 enum.CourseApplDynAttrConfigType.INT=Celé číslo
 enum.CourseApplDynAttrConfigType.DOUBLE=Číslo s desetinnou čárkou
 enum.CourseApplDynAttrConfigType.BOOLEAN=Hodnota ano/ne
+
+enum.CourseApplicationFileType.GDPR=GDPR
+enum.CourseApplicationFileType.HEALTH_INFO=Zdravotní způsobilost
+enum.CourseApplicationFileType.HEALTH_EXAM=Zdravotní prohlídka
+enum.CourseApplicationFileType.CLUB_RULES=Pravidla klubu
+enum.CourseApplicationFileType.OTHER=Jiný
