--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -321,6 +321,7 @@ msg.ui.quest.deletePayment=Opravdu si přejete odstranit platbu "{0}" Kč?
 msg.ui.quest.deleteItem.arg=Opravdu si přejete odstranit položku "{0}"?
 msg.ui.quest.deleteItem=Opravdu si přejete odstranit položku?
 msg.ui.quest.deleteDynAttrConfig=Opravdu si přejete odstranit dynamický atribut "{0}"?
+msg.ui.quest.deleteFileConfig=Opravdu si přejete odstranit nastavení souboru?
 msg.ui.quest.assignInCourseParticipant=Některý z účastníků je již přihlášen do jiného kurzu, chcete pokračovat?
 msg.ui.quest.participantRepresentativeExists=Email / Uživatelské jméno {0} je již v systému registrováno. Prosím přihlaště se pod svým účtem do aplikace a na řádku dítěte zmáčkněte Přihláška na daný ročník nebo pro přihlášení dalšího dítětě zmáčknětě Přihlásit nového účastníka.
 msg.ui.quest.participantPersonalNoExists=Rodné číslo {0} je již v systému registrováno. Prosím přihlaště se pod svým účtem do aplikace a na řádku dítěte zmáčkněte Přihláška na daný ročník.
@@ -350,6 +351,7 @@ msg.ui.info.paymentDeleted=Platba "{0}" Kč byla odstraněna.
 msg.ui.info.itemDeleted=Položka byla odstraněna.
 msg.ui.info.itemDeleted.arg=Položka "{0}" byla odstraněna.
 msg.ui.info.dynAttrConfigDeleted=Dynamický atribut "{0}" byl odstraněn.
+msg.ui.info.fileConfigDeleted=Nastavení souboru bylo odstraněno.
 msg.ui.info.passwordChanged=Heslo bylo změněno.
 msg.ui.title.deleteRecord=Odstranění záznamu
 msg.ui.title.MessageThrowOut=Zahodit zprávu
