course application file admin frontend, file download

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -389,6 +389,7 @@ msg.ui.info.dynAttrStored=Dynamický atribut "{0}" uložen.
 msg.ui.info.usernameChanged=Uživatelské jméno změněno na "{0}", odeslán notifikační email uživateli.
 msg.ui.info.usernameChange.postActionMsg=Po uložení bude provedeno odhlášení a bude Vám odeslán email s přihlašovacími údaji.
 msg.ui.info.fileConfigStored=Nastavení souboru bylo uloženo.
+msg.ui.warn.fileIsRequired=Potřeba nahrát soubor.
 
 # Messages - email
 msg.ui.mail.courseApplication.text0=Dobrý den,
