--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -191,6 +191,7 @@ txt.ui.common.Copy=Kopie
 txt.ui.common.Recipients=Příjemci
 txt.ui.common.To=Komu
 txt.ui.common.FileAttachments=Připojit soubory
+txt.ui.common.FileUpload=Nahrát soubor
 txt.ui.common.ThrowOut=Zahodit
 txt.ui.common.CleanFilter=Vyčistit filtr
 txt.ui.common.Messagetext=Text zprávy...
@@ -245,10 +246,15 @@ txt.ui.common.change=Změnit
 txt.ui.common.search=Hledat
 txt.ui.common.contentText=Obsahuje
 txt.ui.common.type=Typ
+txt.ui.common.PageText.detail=Popisný text na stránce přihlášky
+txt.ui.common.PageAttachment.detail=Zobrazení souboru na stránce přihlášky
+txt.ui.common.EmailAttachment.detail=Přiložení souboru do potvrzovacího emailu
 txt.ui.common.PageText=Text na přihlášce
 txt.ui.common.PageAttachment=Soubor na přihlášce
 txt.ui.common.EmailAttachment=Soubor v emailu
 txt.ui.common.FileConfig=Konfigurace souboru na přihlášce
+txt.ui.common.File=Soubor
+txt.ui.common.ChangeFile=Změnit soubor
 
 txt.ui.CourseType.STANDARD.desc=Jednorázový kurz daném školním roce.
 txt.ui.CourseType.TWO_SEMESTER.desc=Kurz probíhající v obou pololetích školního roku. 
