unregistered from previous year, actual year to url

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -444,7 +444,7 @@ msg.ui.mail.text.usernameChange.text4=Email: {0}
 msg.ui.mail.unregisteredToCurrSeason.subject=Přihláška na ročník {0}
 msg.ui.mail.unregisteredToCurrSeason.text0=Dobrý den,
 msg.ui.mail.unregisteredToCurrSeason.text1=v případě, že máte zájem aby Vaše dítě {0} pokračovalo v plavání i příští školní rok, prosím klikněte na odkaz níže, kterým provedete přihlášení dítěte.
-msg.ui.mail.unregisteredToCurrSeason.text2={0}/pages/public/prihlaska-ucastnik-pokracovani.zul?courseParticipant={1}&courseParticRepresentative={2}
+msg.ui.mail.unregisteredToCurrSeason.text2={0}/pages/public/prihlaska-ucastnik-pokracovani.zul?courseParticipant={1}&courseParticRepresentative={2}&yearFrom={3}
 msg.ui.mail.unregisteredToCurrSeason.text3=S pozdravem
 
 # mail s platebními instrukcemi
