--- a/scb-ui-zk/src/main/webapp/WEB-INF/web.xml
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/web.xml
@@ -105,7 +105,7 @@
 	
 	<filter>
 		<filter-name>dynamicDatasourceFilter</filter-name>
-		<filter-class>com.jzaoralek.scb.ui.common.filter.DynDatasourceContextFilter</filter-class>
+		<filter-class>com.jzaoralek.scb.ui.common.filter.CustomerContextFilter</filter-class>
 		<init-param>
         <param-name>excludedUrls</param-name>
         <!-- Comma separated list of excluded servlets  -->
