OneApp, customer selection

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -17,6 +17,9 @@ txt.ui.menu.messages=Zprávy
 txt.ui.login=Přihlášení
 txt.ui.login.sub=Přihlašte se ke svému účtu
 txt.ui.forgottenPassword=Zapomenuté heslo
+txt.ui.enterUsername=Zadejte email/uživatelské jméno.
+txt.ui.organizationSelection=Výběr klubu
+txt.ui.selectOrganization=Vyberte svůj klub
 
 txt.ui.loginToCourse=přihlášení na kurz
 txt.ui.common.contact=Kontakt
