--- a/scb-web/pom.xml
+++ b/scb-web/pom.xml
@@ -11,7 +11,7 @@
   <properties>
 		<spring-version>4.2.0.RELEASE</spring-version>
 		<slf4j-version>1.7.12</slf4j-version>
-		<logback.version>1.1.3</logback.version>
+		<logback.version>1.3.0-alpha5</logback.version>
   </properties>
 	
   <dependencies>  
@@ -45,11 +45,11 @@
 		<artifactId>slf4j-jdk14</artifactId>
 		<version>${slf4j-version}</version>
 	</dependency>
-<!-- 	<dependency> -->
-<!-- 		<groupId>ch.qos.logback</groupId> -->
-<!-- 		<artifactId>logback-classic</artifactId> -->
-<!-- 		<version>${logback.version}</version> -->
-<!-- 	</dependency> -->
+	<dependency>
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-classic</artifactId>
+		<version>${logback.version}</version>
+	</dependency>
 <!-- 	<dependency> -->
 <!-- 		<groupId>ch.qos.logback</groupId> -->
 <!-- 		<artifactId>logback-core</artifactId> -->
