OneApp, root redirect by cconfig prop

--- a/scb-data-service/src/main/resources/config/example.properties
+++ b/scb-data-service/src/main/resources/config/example.properties
@@ -9,3 +9,6 @@ auth.token=
 # ReCaptcha
 recaptcha.sitekey=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
 recaptcha.secretkey=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
+
+# Root url redirect
+root.redirect=
