--- a/scb-data-service/pom.xml
+++ b/scb-data-service/pom.xml
@@ -18,6 +18,12 @@
 			<groupId>wojnar.bank</groupId>
 			<artifactId>fio-client</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.sportologic</groupId>
+			<artifactId>sprt-model</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 			
 		<!-- Spring -->
 		<dependency>
