SprtAdmin, Spring Data JPA and ZK integration

--- a/sprt-admin/src/main/resources/application.properties
+++ b/sprt-admin/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=sprt_admin
 spring.datasource.password=sprt_admin1234*
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 #spring.jpa.show-sql: true
+
+# ZK Home page
+zk.homepage=hello
