OneApp, client database context from cookie during login

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
 /scb-data-service/src/main/resources/config/wojnar.properties
 .settings
 .externalToolBuilders
+
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+
