OneApp - product name in title instead of org name

--- a/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
+++ b/scb-ui-zk/src/main/webapp/WEB-INF/labels/scb-labels.properties
@@ -1,3 +1,4 @@
+txt.ui.appName=Sportologic
 txt.ui.menu.application=PŘIHLÁŠKA
 txt.ui.menu.applicationWithYear=Přihláška na kurz {0}
 txt.ui.menu.dashboard=Úvodní stránka
