--- a/sprt-model/pom.xml
+++ b/sprt-model/pom.xml
@@ -19,6 +19,18 @@
 		    <artifactId>javax.persistence-api</artifactId>
 		    <version>2.2</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.6.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+            <version>2.6.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
