--- a/sprt-admin/src/main/resources/application.properties
+++ b/sprt-admin/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 
 # ZK Home page
 zk.homepage=hello
+
+# Application props
+database.base.url=jdbc:mysql://localhost:3306/
