--- a/sprt-admin/src/test/resources/application.properties
+++ b/sprt-admin/src/test/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+# Application props
+database.base.url=jdbc:mysql://localhost:3306/
