SprtAdmin, REST communication between sportSdmin and sportologic to reload customer DS configuration bean

--- a/sprt-admin/src/main/resources/application.properties
+++ b/sprt-admin/src/main/resources/application.properties
@@ -10,3 +10,4 @@ zk.homepage=hello
 
 # Application props
 database.base.url=jdbc:mysql://localhost:3306/
+database.script.src.folder=/Users/jakub.zaoralek/develLab/sources/Swimming-Club-Bohumin/sprt-admin/src/main/resources/db/migration/common/
