--- a/sprt-admin/src/main/resources/application.properties
+++ b/sprt-admin/src/main/resources/application.properties
@@ -6,10 +6,14 @@ spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 #spring.jpa.show-sql: true
 
 # ZK Home page
-zk.homepage=hello
+zk.homepage=new-instance
 
 # Application props
 database.base.url=jdbc:mysql://localhost:3306/
 database.script.src.folder=/Users/jakub.zaoralek/develLab/sources/Swimming-Club-Bohumin/sprt-admin/src/main/resources/db/migration/common/
+
 sprt.base.url=https://localhost:7002/
 sprt.base.http.url=http://localhost:7002/
+
+vpsc.apikey=lJAzhjxiHard6L9xG34JySA6inip8S2Be
+vpsc.admin=jakub.zaoralek@gmail.com
