--- a/sprt-admin/src/test/resources/application.properties
+++ b/sprt-admin/src/test/resources/application.properties
@@ -7,5 +7,9 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.H2Dialect
 # Application props
 database.base.url=jdbc:mysql://localhost:3306/
 database.script.src.folder=/Users/jakub.zaoralek/develLab/sources/Swimming-Club-Bohumin/sprt-admin/src/main/resources/db/migration/common/
+
 sprt.base.url=https://localhost:7002/
 sprt.base.http.url=http://localhost:7002/
+
+vpsc.apikey=xxx
+vpsc.admin=jakub.zaoralek@gmail.com
