SprtAdmin, create instance form, add validations of the fields

--- a/sprt-admin/src/main/resources/metainfo/zk-label.properties
+++ b/sprt-admin/src/main/resources/metainfo/zk-label.properties
@@ -10,4 +10,6 @@ sprt.web.new-instance.contactperson.phone=Telefon
 sprt.web.new-instance.contactperson.email=Email
 sprt.web.new-instance.btn.create=Vytvořit
 
+sprt.web.common.msg.warn.requiredValue=Hodnota je povinná.
+sprt.web.common.msg.warn.invalidEmail=Neplatný email
 sprt.web.new-instance.msg.warn.instanceExists=Instance pro klub {0} již existuje.
