SprtAdmin, new instance form, reCaptcha

--- a/sprt-admin/src/test/resources/application.properties
+++ b/sprt-admin/src/test/resources/application.properties
@@ -11,5 +11,10 @@ database.script.src.folder=/Users/jakub.zaoralek/develLab/sources/Swimming-Club-
 sprt.base.url=https://localhost:7002/
 sprt.base.http.url=http://localhost:7002/
 
+# Vas-Hosting
 vpsc.apikey=xxx
 vpsc.admin=jakub.zaoralek@gmail.com
+
+# ReCaptcha
+recaptcha.sitekey=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
+recaptcha.secretkey=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
