--- a/sprt-admin/pom.xml
+++ b/sprt-admin/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>zkplus</artifactId>
 			<version>9.6.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.zkoss.zk</groupId>
+			<artifactId>zhtml</artifactId>
+			<version>9.6.0.1</version>
+		</dependency>
 
 		<!-- Sportologic - model -->
 		<dependency>
@@ -89,6 +94,7 @@
 			<scope>test</scope>
 		</dependency>
 		-->
+
 	</dependencies>
 
 	<build>
