--- a/sprt-admin/src/main/resources/application.properties
+++ b/sprt-admin/src/main/resources/application.properties
@@ -15,5 +15,10 @@ database.script.src.folder=/Users/jakub.zaoralek/develLab/sources/Swimming-Club-
 sprt.base.url=https://localhost:7002/
 sprt.base.http.url=http://localhost:7002/
 
+# Vas-Hosting
 vpsc.apikey=lJAzhjxiHard6L9xG34JySA6inip8S2Be
 vpsc.admin=jakub.zaoralek@gmail.com
+
+# ReCaptcha
+recaptcha.sitekey=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
+recaptcha.secretkey=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
