--- a/sprt-admin/src/main/resources/metainfo/zk-label.properties
+++ b/sprt-admin/src/main/resources/metainfo/zk-label.properties
@@ -1,3 +1,4 @@
+sprt.baseUrl=
 sprt.web.new-instance.title=Sportologic | Vytvoření nové instance
 sprt.web.new-instance.club.org.info=Informace o klubu
 sprt.web.new-instance.club.name=Název
@@ -9,6 +10,11 @@ sprt.web.new-instance.contactperson.surname=Příjmení
 sprt.web.new-instance.contactperson.phone=Telefon
 sprt.web.new-instance.contactperson.email=Email
 sprt.web.new-instance.btn.create=Vytvořit
+sprt.web.new-instance.confirm.instanceCreated=Vaše instance byla úspěšně založena a je připravena na adrese
+sprt.web.new-instance.confirm.access=Přístupové údaje
+sprt.web.new-instance.confirm.username=Uživatelské jméno
+sprt.web.new-instance.confirm.password=Heslo
+sprt.web.new-instance.confirm.email=Detailní informace včetně přístupu byly odeslány na adresu {0} .
 
 sprt.web.common.msg.warn.requiredValue=Hodnota je povinná.
 sprt.web.common.msg.warn.invalidEmail=Neplatný email
