SprtAdmin, war deply

--- a/sprt-admin/src/main/resources/application.properties
+++ b/sprt-admin/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.password=sprt_admin1234*
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 #spring.jpa.show-sql: true
 
+#spring.datasource.jndi-name=java:comp/env/jdbc.sportlogic
+
 # ZK Home page
 zk.homepage=new-instance
 
