--- a/sprt-admin/pom.xml
+++ b/sprt-admin/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<packaging>war</packaging>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -16,6 +17,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<zk.version>9.6.0.1</zk.version>
+		<start-class>com.sportologic.sprtadmin.SprtAdminApplication</start-class>
 	</properties>
 
 	<repositories>
