--- a/sprt-admin/src/main/resources/application.properties
+++ b/sprt-admin/src/main/resources/application.properties
@@ -22,3 +22,21 @@ vpsc.admin=jakub.zaoralek@gmail.com
 # ReCaptcha
 recaptcha.sitekey=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
 recaptcha.secretkey=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
+
+# i18n
+# Whether to always apply the MessageFormat rules, parsing even messages without arguments.
+spring.messages.always-use-message-format=false
+# Comma-separated list of basenames
+spring.messages.basename=messages
+# Loaded resource bundle files cache duration.
+# When not set, bundles are cached forever.
+# If a duration suffix is not specified, seconds will be used.
+spring.messages.cache-duration=
+# Message bundles encoding.
+spring.messages.encoding=UTF-8
+# Whether to fall back to the system Locale
+# if no files for a specific Locale have been found.
+spring.messages.fallback-to-system-locale=true
+# Whether to use the message code as the default message instead of throwing a "NoSuchMessageException".
+# Recommended during development only.
+spring.messages.use-code-as-default-message=false
