--- a/sprt-admin/pom.xml
+++ b/sprt-admin/pom.xml
@@ -77,6 +77,13 @@
 			<artifactId>lombok</artifactId>
 		</dependency>
 
+		<!-- Json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20220320</version>
+		</dependency>
+
 		<!-- MySql DB for tests
 		<dependency>
 			<groupId>mysql</groupId>
