SprtAdmin, crossOrogin from props

--- a/sprt-admin/src/main/resources/application.properties
+++ b/sprt-admin/src/main/resources/application.properties
@@ -23,6 +23,9 @@ vpsc.admin=jakub.zaoralek@gmail.com
 recaptcha.sitekey=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
 recaptcha.secretkey=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
 
+# CrossOrigin
+restcontroller.crossorigin.origins=http://localhost:4200
+
 # i18n
 # Whether to always apply the MessageFormat rules, parsing even messages without arguments.
 spring.messages.always-use-message-format=false
