--- a/sprt-admin/src/test/resources/application.properties
+++ b/sprt-admin/src/test/resources/application.properties
@@ -18,3 +18,6 @@ vpsc.admin=jakub.zaoralek@gmail.com
 # ReCaptcha
 recaptcha.sitekey=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
 recaptcha.secretkey=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
+
+# CrossOrigin
+restcontroller.crossorigin.origins=http://localhost:4200
