--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ target/
 !**/src/test/**/target/
 
 **/src/main/resources/application-prod.properties
+**/src/main/resources/application.properties
 
 ### IntelliJ IDEA ###
 .idea
